@@ -4,6 +4,7 @@
 #include <vector>
 #include <algorithm>
 #include <stdexcept>
+#include <initializer_list>
 
 namespace FBB
 {
@@ -37,6 +38,8 @@ class LinearMap: private std::vector<std::pair<Key, Value>, Alloc>
 
         template <typename Iterator>
         LinearMap(Iterator begin, Iterator end);
+
+        LinearMap(std::initializer_list<value_type> initial);
 
         LinMap &operator=(LinMap const &other)  = default;
 
@@ -105,6 +108,7 @@ class LinearMap: private std::vector<std::pair<Key, Value>, Alloc>
 #include "insert2.f"
 #include "insert3.f"
 #include "linearmap1.f"
+#include "linearmap2.f"
 #include "lowerbound1.f"
 #include "lowerbound2.f"
 #include "operatorindex.f"
