@@ -1,3 +1,10 @@
+bobcat (3.20.01)
+
+  * Added the LinearMap(initializer_list<value_type>) constructor to the
+    class template LinearMap.
+
+ -- Frank B. Brokken <f.b.brokken@rug.nl>  Sat, 18 Jan 2014 16:55:32 +0100
+
 bobcat (3.20.00)
 
   * Added the class template LinearMap implenting an associative array using
